--- a/restaurante-api/composer.json
+++ b/restaurante-api/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "jailtonsc/validador-cpf-laravel": "^5.0",
+        "jzonta/faker-restaurant": "^2.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7"
